# eMail

./: .gitignore  CMakeLists.txt
SMTPServer.Application/: CMakeLists.txt
SMTPServer.Application/Source/: main.cpp
SMTPServer.Application/Source/SMTP/: SMTPMessageType.h
SMTPServer.Application/Source/TCP/: Client.cpp  Client.h  Connection.h  SMTPMessageType.h  Server.h  SocketManager.cpp  SocketManager.h
SMTPServer.Core/: CMakeLists.txt
SMTPServer.Core/Source/: Logger.cpp  Logger.h  PCH.h
SMTPServer.Core/Source/Interfaces/: IClient.h  IConnection.h  ILogger.h  IServer.h
SMTPServer.Core/Source/Models/: SocketMessage.cpp  SocketMessage.h
SMTPServer.Core/Source/Utilities/: Logger.cpp  Logger.h  Queue.cpp  Queue.h
eMail.Application/: CMakeLists.txt
eMail.Application/Source/: Client.cpp  Client.h  SocketManager.cpp  SocketManager.h  main.cpp
eMail.Application/Source/Socket/: Client.cpp  Client.h  Connection.cpp  Connection.h  SMTPMessageType.h  Server.cpp  Server.h  SocketManager.cpp  SocketManager.h
eMail.Core/: CMakeLists.txt
eMail.Core/Headers/: Connection.h  Logger.h  PCH.h  Queue.h  Server.h  SocketMessage.h  TypeSMTPMessage.h
eMail.Core/Source/: Connection.cpp  Logger.cpp  Queue.cpp  Server.cpp  SocketMessage.cpp
eMail.Core/Source/Interfaces/: IClient.h  IConnection.h  ILogger.h  IServer.h
eMail.Core/Source/Models/: SocketMessage.cpp  SocketMessage.h
eMail.Core/Source/Utilities/: Logger.cpp  Logger.h  Queue.cpp  Queue.h
